<resources>
    <string name="app_name">Resistance</string>
    <string name="action_washare">Share on Whatsapp</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_add_warrior">Add Warrior</string>
    <string name="spinner1">Species</string>
    <string name="spinner2">Gender</string>
    <string name="spinner3">Planet</string>
    <string name="title_activity_disp_warrior">Display Warriors</string>

</resources>
