<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.droidwars.starwars.resistance.MainActivity" >
    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_edit" />

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_delete" />
    <item android:id="@+id/action_washare"
        android:title="@string/action_washare"
        android:orderInCategory="102"
        app:showAsAction="ifRoom"
        android:icon="@drawable/whatsapp_share" />
</menu>