<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.droidwars.starwars.resistance.addWarrior"
    tools:showIn="@layout/activity_add_warrior">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Warrior Name"
            android:ems="8"
            android:id="@+id/name_txt"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ImageView
            android:layout_height="120dp"
            android:layout_width="120dp"
            android:scaleType="centerInside"
            android:layout_marginLeft="220dp"
            android:id="@+id/img_warrior"
            android:background="@drawable/image_border"
            android:contentDescription="Warrior Image"
            android:onClick="choose_img" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Affiliation:"
            android:id="@+id/label_aff"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/name_txt"
            android:layout_marginLeft="14dp" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_aff"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/radioGroup">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Light Side"
                    android:id="@+id/rb_ls" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Dark Side"
                    android:id="@+id/rb_ds"
                    android:layout_marginLeft="90dp" />

        </RadioGroup>

        <Spinner
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:id="@+id/species_dropDown"
            android:layout_below="@+id/radioGroup"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dialog"
            android:prompt="@string/spinner1"/>
        <Spinner
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:id="@+id/gender_dropDown"
            android:layout_below="@+id/radioGroup"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dialog"
            android:prompt="@string/spinner2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Last Spotted on:"
            android:id="@+id/label_date"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/gender_dropDown"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Date"
            android:textAllCaps="false"
            android:id="@+id/date_btn"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:layout_below="@+id/label_date"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@android:drawable/btn_default"
            android:onClick="date_picker_dialog"/>
        <ImageView
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:scaleType="centerCrop"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/label_date"
            android:id="@+id/calendar"
            android:background="@drawable/ic_menu_my_calendar"
            android:contentDescription="Calendar Button"
            android:onClick="date_picker_dialog"/>

        <TextView
            android:hint="dd/mm/yyyy"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:id="@+id/lso_date"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="154dp"
            android:layout_below="@+id/label_date" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Last known presence:"
            android:id="@+id/label_lkp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/date_btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Spinner
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:id="@+id/planet_dropDown"
            android:layout_below="@+id/date_btn"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="14dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dialog"
            android:prompt="@string/spinner3"/>

    </RelativeLayout>
</ScrollView>
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Details"
        android:textAllCaps="false"
        android:id="@+id/save_btn"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="4dp"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_selector"
        android:onClick="save_details"/>
</RelativeLayout>
